Fixed responsive category button on tablet portrait.

--- a/mobile-talk-black-html5/css/default.css
+++ b/mobile-talk-black-html5/css/default.css
@@ -796,11 +796,11 @@ aside .module .div {
 	background: #d0d0d0;
 	margin: 10px 0;
 }
-.mailinglist-btn{
-	width:10% !important;
+#mailistBox input[type="submit"]{
+	width:20% !important;
 }
 #mailistBox input[type="text"]{
-	width:90% !important;
+	width:80% !important;
 }
 .manf-select {
 	background: #FFF url(../images/dark-arrow.png) no-repeat right center;
@@ -879,7 +879,7 @@ footer .col2 {
     width: 260px;
 }
 footer .col3 {
-	width: 310px;
+	width: 250px;
     margin: 0;
 	float: right;
 }
@@ -936,7 +936,6 @@ footer .col3 {
 #mailistBox input, #mailistBox span {
 	float: left;
 	display: block;
-	margin-top:12px;
 }
 #mailistBox span {
 	margin-right: 30px;
@@ -959,19 +958,21 @@ footer .col3 {
 	border-radius: 0;
 	-webkit-border-radius: 0;
 }
-.mailinglist-btn {
+#mailistBox input[type="submit"] {
+	background: #000 url('../images/mail.png') no-repeat center center;
 	border: none;
+	border-left: 2px solid #000;
+	border-right: 1px solid #FFF;
 	float: right;
-	color: #fff;
-	background-color:#000;
+	color: #000;
 	cursor: pointer;
 	font-size: 14px;
 	font-weight: 400;
 	height: 37px;
 	margin: 0;
 	padding: 0;
-	padding-right:8px;
 	text-align: center;
+    text-indent: -9999px;
 	text-transform: uppercase;
 	width: 10%;
 	-webkit-appearance: none;
@@ -983,39 +984,11 @@ footer .col3 {
 	-webkit-transition: all 0.3s;
 	-o-transition: all 0.3s;
 }
-.mailinglist-btn:hover {
-	border: none;
-	float: right;
-	color: #fff;
-	background-color:#000;
-	cursor: pointer;
-	font-size: 14px;
-	font-weight: 400;
-	height: 37px;
-	margin: 0;
-	padding: 0;
-	padding-right:8px;
-	text-align: center;
-	text-transform: uppercase;
-	width: 10%;
-	-webkit-appearance: none;
-	-moz-border-radius: 0;
-	border-radius: 0;
-	-webkit-border-radius: 0;
-	transition: all 0.3s;
-	-moz-transition: all 0.3s;
-	-webkit-transition: all 0.3s;
-	-o-transition: all 0.3s;
+#mailistBox input[type="submit"]:hover {
+	background: #000 url('../images/mail.png') no-repeat center center;
 }
-.icon-mail-alt:before {
-    content: '\e832';
-}
-input:focus::-webkit-input-placeholder { color:transparent; }
-input:focus:-moz-placeholder { color:transparent; } /* Firefox 18- */
-input:focus::-moz-placeholder { color:transparent; } /* Firefox 19+ */
-input:focus:-ms-input-placeholder { color:transparent; } /* oldIE ;) */
 #mailistBox input[type="radio"] {
-    margin: 15px 5px 0 0;
+    margin: 2px 5px 0 0;
     padding: 0;
 }
 .social-icons {
@@ -1495,7 +1468,7 @@ footer .col3 {
 #mailistBox input[type="text"] {
 	width: 90%;
 }
-.mailinglist-btn {
+#mailistBox input[type="submit"] {
 	width: 10%;
 }
 #copyright {
@@ -1635,4 +1608,22 @@ body {
     .top-menu li a {color: #fff!important;}
     #home h2.header-specials {background: none;}
     nav#catNavMenu {display: none; visibility: none;}
+}
+
+@media(max-width: 980px) {
+	.slicknav_menu {
+		display: block;
+	}
+	.top-menu {
+		height: auto;
+	}
+	.top-menu li {
+		line-height: 42.5px;
+	}
+	.slicknav_nav {
+		top: 43px;
+	}
+	.m-search button {
+		float: left;
+	}
 }
